143-wallet:优化主界面顶部快捷按钮栏位的实现
Ticket: LEUIAPP-265
1)实现一个单独的布局，包含数据查询以及数据展示的逻辑
原因：此view的展示是从服务器上边拉去数据，并且包含的逻辑比较复杂，不能像其它独立的view一样，只负责界面的渲染。
因此把数据查询以及数据展示的逻辑，放在了view中。

Change-Id: If3e2b22368a5ee0fa5ee470d350af29af9bdebfe
Signed-off-by: zhuchuntao <zhuchuntao@le.com>

--- a/LetvWallet/res/values-zh-rCN/string_main.xml
+++ b/LetvWallet/res/values-zh-rCN/string_main.xml
@@ -2,6 +2,7 @@
     <string name="main_tab_recommend">推荐</string>
     <string name="main_tab_wallet">钱包</string>
     <string name="main_tab_my">我的</string>
+    <string name="main_top_card">卡券包</string>
 
     <string name="main_recommend_input_error">格式错误</string>
     <string name="main_recommend_error_no_network">无网络，请检查你的网络!</string>
