131-Lepay: Account : 绑卡及卡列表
添加hideBlankPage ；
跳转绑手机号，实名认证后刷新数据；
修改字体dp 为sp；
添加manifest activity orientation = portrait

Ticket: LEUIAPP-265

Change-Id: I0430585082d6e3c586ff3d9c7427cd4b9dcd8168
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/res/layout/account_card_list_item.xml
+++ b/LePay/res/layout/account_card_list_item.xml
@@ -21,7 +21,7 @@
         android:id="@+id/tvBankName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textColor="@android:color/white"
         android:layout_toRightOf="@id/imgBankIcon"
         android:layout_alignTop="@id/imgBankIcon"
@@ -30,7 +30,7 @@
         android:id="@+id/tvCardType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:textColor="#ccFFFFFF"
         android:layout_below="@id/tvBankName"
         android:layout_alignLeft="@id/tvBankName"
@@ -41,7 +41,7 @@
         android:id="@+id/tvCardNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:maxLines="1"
         android:textColor="#ccFFFFFF"
         android:layout_alignParentBottom="true"
