--- a/LetvWallet/res/layout/main_recommend_cardview_c.xml
+++ b/LetvWallet/res/layout/main_recommend_cardview_c.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -24,11 +25,14 @@
             android:textAppearance="@style/Recommend_Card_SubTitle"
             />
     </LinearLayout>
-    <ImageView
+    <com.letv.shared.widget.BorderedRoundedCornersImageView
         android:id="@+id/card_icon"
         android:layout_width="46dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
         android:scaleType="fitStart"
+        app:corner_radius="2dp"
+        app:border_width="0dp"
+        app:round_background="true"
         />
 </LinearLayout>
