--- a/LePay/res/values/theme.xml
+++ b/LePay/res/values/theme.xml
@@ -6,11 +6,7 @@
     </style>
 
     <!-- Setting -->
-    <style name="SettingTheme" parent="AppTheme.Arrow">
-        <item name="walletPrimaryColor">@color/colorWhite</item>
-        <item name="android:statusBarColor">@color/colorSettingPrimary</item>
-        <item name="android:windowBackground">@color/colorWhite</item>
-        <item name="android:titleTextColor">@color/colorWhite</item>
-    </style>
+    <style name="SettingTheme" parent="AppTheme.Arrow" />
+
     <style name="SettingWebTheme" parent="AppTheme.Arrow"/>
 </resources>
