--- a/LetvWallet/res/layout/main_recommend_cardview_d.xml
+++ b/LetvWallet/res/layout/main_recommend_cardview_d.xml
@@ -16,7 +16,10 @@
         android:id="@+id/content_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
+        android:background="@color/colorPlaceHolderBg"
+        android:alpha="@dimen/le_img_alpha"
+        android:scaleType="fitStart"
+        android:adjustViewBounds="true"
         app:corner_radius="2dp"
         app:border_width="0dp"
         app:round_background="true"
