--- a/LePay/res/values-zh-rCN/strings_account.xml
+++ b/LePay/res/values-zh-rCN/strings_account.xml
@@ -28,6 +28,7 @@
     <string name="account_card_title">银行卡</string>
     <string name="account_card_menu_title">帮助</string>
     <string name="account_card_item_click_tip">暂时无法操作，请查看帮助</string>
+    <string name="account_verify_sms_send_fail">验证码获取过于频繁，请稍后重试</string>
 
 
 </resources>
