--- a/LePay/res/values/strings_account.xml
+++ b/LePay/res/values/strings_account.xml
@@ -9,7 +9,7 @@
     <string name="account_verify_input_sms_code">Enter code</string>
     <string name="account_verify_get_sms_code">Resend SMS code</string>
     <string name="account_verify_btn_comfire_update">Next</string>
-    <string name="account_agreement_tips">I have read the% %1$s, and have understood the above, and bear the associated risks.</string>
+    <string name="account_agreement_tips">I have read the %1$s, and have understood the above, and bear the associated risks.</string>
     <string name="account_agreement">Payment channel service agreement </string>
     <string name="account_verify_name_invalid">Please enter a valid word</string>
     <string name="account_verify_id_num_invalid">Please enter a valid ID number</string>
@@ -28,6 +28,6 @@
     <string name="account_card_title">Card</string>
     <string name="account_card_menu_title">Help</string>
     <string name="account_card_item_click_tip">Temporarily unable to operate, please check help</string>
-
+    <string name="account_verify_sms_send_fail">The SMS code is getting too frequent, please try again later</string>
 
 </resources>
