143-wallet: 解决从推荐卡片跳转到优惠券，优惠券显示无内容的问题
RootCause: uri decode导致进入优惠券后无法解决携带参数

Solution：在跳转时不对uri进行decode操作

Ticket: LEUIAPP-918

Change-Id: I6734e389d1f588ef75826af347568f24873aa467
Signed-off-by: liuliang6 <liuliang6@le.com>
Signed-off-by: LiuLiang <liuliang6@le.com>

--- a/LetvWallet/res/layout/coupon_detail_layout.xml
+++ b/LetvWallet/res/layout/coupon_detail_layout.xml
@@ -52,6 +52,7 @@
         <View style="@style/Divider_HorizontalLine_Style" />
 
         <LinearLayout
+            android:id="@+id/coupon_info_label"
             style="@style/SectionBase.Label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -79,6 +80,7 @@
         <View style="@style/Divider_HorizontalLine_Style" />
 
         <LinearLayout
+            android:id="@+id/coupon_usage_condition_label"
             style="@style/SectionBase.Label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -94,6 +96,7 @@
         <View style="@style/Divider_HorizontalLine_Style" />
 
         <RelativeLayout
+            android:id="@+id/coupon_usage_condition_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/content_item_bg_color"
