143-wallet: 调整推荐卡片下面按钮的样式
Ticket: LEUIAPP-868 LEUIAPP-865

Change-Id: I7b72481a5607190d107381bfa03e7e0d52ead914
Signed-off-by: liuliang6 <liuliang6@le.com>

--- a/LetvWallet/res/values/colors.xml
+++ b/LetvWallet/res/values/colors.xml
@@ -160,5 +160,7 @@
     <color name="me_primary_color">#447DE9</color>
     <color name="me_tab_default_color">#808080</color>
 
+    <color name="recommend_footer_text_color">#5272AE</color>
+
 
 </resources>
