131-Lepay: Account: 未添加银行卡的卡列表页面没有任何提示信息
Ticket: LEUIAPP-890

Root cause: missing set blankpage

Solution: set blankpage whem page is empty;

Change-Id: Iecb39840c9de9afc0136bbbde2c00e7cd344a681
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/res/values/strings_account.xml
+++ b/LePay/res/values/strings_account.xml
@@ -29,5 +29,6 @@
     <string name="account_card_menu_title">Help</string>
     <string name="account_card_item_click_tip">Temporarily unable to operate, please check help</string>
     <string name="account_verify_sms_send_fail">The SMS code is getting too frequent, please try again later</string>
+    <string name="account_card_list_empty">No card</string>
 
 </resources>
