--- a/LetvWallet/res/layout/mobile_activity_main.xml
+++ b/LetvWallet/res/layout/mobile_activity_main.xml
@@ -35,77 +35,82 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/product_content_ll"
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_weight="1">
 
                 <LinearLayout
-                    android:id="@+id/product_ll"
+                    android:id="@+id/product_content_ll"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/mobile_default_vertical_margin"
-                        android:background="@color/wallet_windowBackground_color" />
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/label_deposite"
-                            style="@style/TextAppearance.Wallet.MobileLabel"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-                    </RelativeLayout>
-
-                    <com.letv.walletbiz.mobile.ui.ProductsPanel
-                        android:id="@+id/rv_product_panel"
+                    <LinearLayout
+                        android:id="@+id/product_ll"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:overScrollMode="never"
-                        android:paddingLeft="6dp"
-                        android:paddingRight="6dp" />
-                </LinearLayout>
+                        android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/flow_entrance_ll"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/mobile_default_vertical_margin"
+                            android:background="@color/wallet_windowBackground_color" />
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/mobile_default_vertical_margin"
-                        android:background="@color/wallet_windowBackground_color" />
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                            <TextView
+                                android:id="@+id/label_deposite"
+                                style="@style/TextAppearance.Wallet.MobileLabel"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+                        </RelativeLayout>
 
-                        <TextView
-                            style="@style/TextAppearance.Wallet.MobileLabel"
-                            android:layout_width="wrap_content"
+                        <com.letv.walletbiz.mobile.ui.ProductsPanel
+                            android:id="@+id/rv_product_panel"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/label_mobile_flow_entrance_deposite" />
-                    </RelativeLayout>
+                            android:layout_gravity="bottom"
+                            android:overScrollMode="never"
+                            android:paddingLeft="6dp"
+                            android:paddingRight="6dp" />
+                    </LinearLayout>
 
-                    <com.letv.walletbiz.mobile.ui.ProductsPanel
-                        android:id="@+id/flow_entrance_product_panel"
+                    <LinearLayout
+                        android:id="@+id/flow_entrance_ll"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:overScrollMode="never"
-                        android:paddingLeft="6dp"
-                        android:paddingRight="6dp" />
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/mobile_default_vertical_margin"
+                            android:background="@color/wallet_windowBackground_color" />
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                style="@style/TextAppearance.Wallet.MobileLabel"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/label_mobile_flow_entrance_deposite" />
+                        </RelativeLayout>
+
+                        <com.letv.walletbiz.mobile.ui.ProductsPanel
+                            android:id="@+id/flow_entrance_product_panel"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:overScrollMode="never"
+                            android:paddingLeft="6dp"
+                            android:paddingRight="6dp" />
+                    </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
+            </ScrollView>
 
             <RelativeLayout
                 android:layout_width="match_parent"
