143-wallet:解决英文模式下，首页首字母大写
Ticket: LEUIAPP-993
1)修改英文资源名称

Change-Id: I4b2369e8a36670abff68938dec580c48b4cdddfa
Signed-off-by: zhuchuntao <zhuchuntao@le.com>

--- a/LetvWallet/res/values/string_main.xml
+++ b/LetvWallet/res/values/string_main.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="main_tab_recommend">recommended</string>
-    <string name="main_tab_wallet">wallet</string>
-    <string name="main_tab_my">mine</string>
+    <string name="main_tab_recommend">Recommended</string>
+    <string name="main_tab_wallet">Wallet</string>
+    <string name="main_tab_my">Mine</string>
     <string name="main_top_card">coupon</string>
     <string name="main_recommend_input_error">Please enter a valid word</string>
     <string name="main_recommend_error_no_network">No network connection. Please check your network settings.</string>
