131-Lepay: Account : 点击设置有时无反应，应增大点击域
Ticket: LEUIAPP-976

Root cause: no

Solution: large img size

Change-Id: I771f5e45b56c008fd91d4048c6891d1ea85d90b1
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LetvWallet/res/layout/main_tab_my.xml
+++ b/LetvWallet/res/layout/main_tab_my.xml
@@ -12,12 +12,13 @@
         android:paddingLeft="@dimen/me_top_info_horizontal_padding"
         android:paddingRight="@dimen/me_top_info_horizontal_padding">
 
-        <Button
+        <ImageView
             android:id="@+id/btnSetting"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:padding="5dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/btn_setting"
+            android:src="@drawable/btn_setting"
             android:layout_alignParentRight="true" />
 
         <com.letv.shared.widget.BorderedCircleImageView
