143-wallet: mobile 解决加载不出订单确认页面问题
Ticket: LEUIAPP-998

Root cause: 当数据异常时sku为空导致数据无法回调，所以页面一直显示加载中

Solution: 确认订单页面添加关键数据的检测，提示用户“参数错误”，页面内网络数据返回后保证有回调

Change-Id: Ia565459569824c05a1568c2f048a77bb10a8caea
Signed-off-by: changjiajie <changjiajie@le.com>

--- a/LetvWallet/res/values-zh-rCN/string_order.xml
+++ b/LetvWallet/res/values-zh-rCN/string_order.xml
@@ -17,6 +17,7 @@
     <string name="total_order_list_hearder_other_month">yyyy年MM月</string>
     <string name="order_desc_label_status">状态:</string>
     <string name="order_desc_label_sn">编号:</string>
+    <string name="order_parameter_error">参数错误</string>
 
     <string name="label_order_cost_info">结算信息</string>
     <string name="label_order_product_info">商品信息</string>
