143-wallet: String: 更新钱包字符串英文翻译
Ticket: LEUIAPP-1054

Root cause:无

Solution:无

Signed-off-by: Zhang Huancheng <zhanghuancheng@le.com>

Change-Id: I26045d08fddfd72526be8f896cf144e1c96783fd

--- a/LetvWallet/res/values/string_mobile.xml
+++ b/LetvWallet/res/values/string_mobile.xml
@@ -44,7 +44,7 @@
     <string name="mobile_prompt_user_select_load_title">Network error. Please reload.</string>
     <string name="mobile_prompt_user_select_reload">Reload</string>
     <string name="mobile_prompt_user_select_cancel">Cancel</string>
-    <string name="mobile_permission_contacts_refused_toast">You need to grant the contact reading permission to this app</string>
+    <string name="mobile_permission_contacts_refused_toast">"Access to contacts is required"</string>
     <!-- matter attention content -->
     <string name="label_matter_attention">Notes</string>
 </resources>
