131-Lepay: Optimization payment scheme
Ticket: LEUI-9410

Solution:
添加支付通道选择页面：
  1获取网络列表数据进行填充显示：
     2网络数据错误时：
	3如果有数据用Toast提示网络错误；
	3如果没有数据显示无网络弹框；
点击支付通道：
   1判断数据来源为Boss：使用sdk提供的接口调起相对应支付方式
   1数据来源为金融：
       2未激活加载激活页面：
           3拦截到激活成功地址后请求支付地址：
               4获取成功加载支付收银台：
	           5拦截到支付成功地址后，获取订单的支付状态：
		       6订单状态为已支付，回调支付成功给业务方；
		       6订单状态为失败，弹出支付失败弹框；
	           5获取失败返回到支付列表页更新列表数据；
       2已激活获取对应的支付通道的URL,获取URL后调起WebView
退出账户：退出支付页，返回支付失败给业务方
网络监听：网络连接时本地数据为空时获取支付列表数据

Change-Id: I92f825728a3e6afa250963f6a432e84b2ab37dd1
Signed-off-by: changjiajie <changjiajie@letv.com>

--- a/LePay/res/values/attrs.xml
+++ b/LePay/res/values/attrs.xml
@@ -14,5 +14,9 @@
         <!-- Text Color of the error message -->
         <attr name="ErrorTextColor" format="reference|color" />
 
+	</declare-styleable>
+
+    <declare-styleable name="TabFlowLayout">
+        <attr name="singleLine" format="boolean" />
     </declare-styleable>
 </resources>
