--- a/LePay/res/values/colors.xml
+++ b/LePay/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="red">#FFFF0000</color>
+
     <!--account-->
     <color name="account_primary_color">#447DE9</color>
     <color name="account_verify_text_hint_color">#B3B3B3</color>
@@ -10,5 +13,15 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="divider_secondary_horizontal_color">#F2F2F2</color>
     <color name="account_edit_error_color">#F7A623</color>
+
+    <color name="colorPrimary">#77CEE1</color>
+    <color name="colorSecondary">#747474</color>
+    <color name="colorDividerLineBg">#DFDFDF</color>
+    <color name="transparent">#00000000</color>
+    <color name="channel_list_tv_primary_color">#404040</color>
+    <color name="channel_list_tv_secondary_color">#808080</color>
+    <color name="lepay_pay_price_tv_color">#3386F7</color>
+    <color name="lepay_pay_cancel_tv_color">#262626</color>
+    <color name="colorBtnBlue">#2BA2FF</color>
 
 </resources>
