--- a/LePay/res/values/dimens.xml
+++ b/LePay/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="setting_divider_height">6dp</dimen>
     <dimen name="setting_item_height">58dp</dimen>
 
+    <dimen name="pay_channel_v_height">360dp</dimen>
+    <dimen name="pay_channel_listv_height">160dp</dimen>
+    <dimen name="small_padding">8dp</dimen>
+    <dimen name="lepay_channel_cancel_tv_size">16sp</dimen>
+
 </resources>
