--- a/LePay/res/values/theme.xml
+++ b/LePay/res/values/theme.xml
@@ -8,5 +8,14 @@
     <!-- Setting -->
     <style name="SettingTheme" parent="AppTheme.Arrow" />
 
-    <style name="SettingWebTheme" parent="AppTheme.Arrow"/>
+    <style name="SettingWebTheme" parent="AppTheme.Arrow" />
+
+    <style name="LepayEntryTheme" parent="@style/AppTheme">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
 </resources>
